// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option should render a default Option 1`] = `
<div
  aria-disabled={false}
  aria-selected={false}
  className="option is-default"
  disabled={false}
  role="option"
>
  <span
    className="display"
  >
    display
  </span>
</div>
`;

exports[`Option should render a disabled Option 1`] = `
<div
  aria-disabled={true}
  aria-selected={false}
  className="option is-default is-disabled"
  disabled={true}
  role="option"
>
  <span
    className="display"
  >
    display
  </span>
</div>
`;
